# hyperv-virtiofs

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  NOTICE  README.md  cbindgen.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
crates/hcs-sys/: Cargo.toml
crates/hcs-sys/src/: lib.rs
crates/hcs-testvm/: Cargo.toml
crates/hcs-testvm/src/: lib.rs
crates/hcs-testvm/tests/: attach.rs  attach_abi.rs  attach_oop.rs  attach_proxy.rs  attach_virtiofs.rs  boot.rs  concurrent_processes.rs  diag_cold_multidevice.rs  edge_cases.rs  file_selftest.rs  hotplug.rs  perf_baseline.rs
crates/hdv/: Cargo.toml
crates/hdv-sys/: Cargo.toml
crates/hdv-sys/src/: lib.rs
crates/hdv/src/: lib.rs  pci.rs  proxy.rs  vmworker.rs
crates/hyperv_virtiofs/: Cargo.toml
crates/hyperv_virtiofs/src/: lib.rs  logging.rs
crates/virtio-hdv/: Cargo.toml
crates/virtio-hdv/src/: doorbell.rs  handle.rs  interrupt.rs  lib.rs  mem.rs  offload.rs  payload.rs  pool.rs  ratelimit.rs  reqstats.rs  trace.rs
crates/vmworker-sys/: Cargo.toml
crates/vmworker-sys/src/: lib.rs
docs/: hdv-aperture-internals.md  hdv-proxy-abi.md  hotplug-spike.md  perf-baseline.md  perf-optimization.md  roadmap.md  share-abi.md  testing.md
examples/: README.md
examples/c/: main.c
examples/go/: go.mod  main.go
include/: hyperv_virtiofs.h
test/: README.md  build-guest-artifacts.ps1  run-e2e.ps1  run-perf-baseline.ps1
test/guest/: build-rocky-initramfs.sh  init  repack-perfbench-initramfs.sh
