[package]
name = "hcs-testvm"
description = "Test harness: stand up a throwaway Rocky Linux HCS compute system (direct kernel boot) and expose its HCS_SYSTEM handle for HDV to attach to. The spike-1 validation rig."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
# Test-only rig; never shipped or published.
publish = false

[dependencies]
hcs-sys = { path = "../hcs-sys" }
serde_json = "1"
# The attach spikes drive a minimal HDV PCI device against the live HCS_SYSTEM.
# A normal (not dev) dependency so the out-of-process spike's child binary
# (`src/bin/attach_child.rs`) can use it — `src/bin` targets can't see dev-deps.
hdv = { path = "../hdv" }
# The virtio-fs-over-HDV attach spike (`tests/attach_virtiofs.rs`) drives the real
# OpenVMM transport instead of the trivial SpikeDevice.
virtio-hdv = { path = "../virtio-hdv" }
# The shipped C ABI (hvfs_host_open / hvfs_add_share / …), driven end-to-end by
# `tests/attach_abi.rs` and exercised one-host-per-process by the `host_child` binary
# (`src/bin/host_child.rs`) the `concurrent_processes` test spawns. A normal (not dev)
# dependency so that `src/bin` target can use it — `src/bin` can't see dev-deps.
hyperv_virtiofs = { path = "../hyperv_virtiofs" }

[dev-dependencies]
# `tests/file_selftest.rs` recomputes the sha256 of a large file the guest wrote
# through virtio-fs, to verify guest->host write-through coherence.
sha2 = "0.10"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_IO",
] }
