[package]
name = "hdv-sys"
description = "Raw FFI declarations for the Windows Host Device Virtualization (HDV) API (vmdevicehost.dll)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
# Internal workspace crate; not published to crates.io.
publish = false

[lints.rust]
unsafe_op_in_unsafe_fn = "warn"
