[package]
name = "hdv"
description = "Safe RAII wrapper over the Windows HDV API (device host, instance, guest-memory apertures, doorbells)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
# Internal workspace crate; not published to crates.io.
publish = false

[dependencies]
hdv-sys = { path = "../hdv-sys" }
vmworker-sys = { path = "../vmworker-sys" }
