[package]
name = "virtio-hdv"
description = "OpenVMM virtio transport carried over HDV: guest memory via apertures, queue-notify via doorbells, PCI config space. The open analog of WSL's wsldevicehost.dll."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
hdv = { path = "../hdv" }

# Reused OpenVMM seam crates (the transport drives a VirtioDevice via these).
virtio.workspace = true
guestmem.workspace = true
vmcore.workspace = true
pal_event.workspace = true
pal_async.workspace = true
inspect.workspace = true
