[package]
name = "virtio-hdv"
description = "OpenVMM virtio transport carried over HDV: guest memory via apertures, queue-notify via doorbells, PCI config space. The open analog of WSL's wsldevicehost.dll."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
# Internal workspace crate; OpenVMM git deps bar crates.io publishing.
publish = false

[dependencies]
hdv = { path = "../hdv" }
hdv-sys = { path = "../hdv-sys" }

# Reused OpenVMM seam crates (the transport drives a VirtioDevice via these).
virtio.workspace = true
virtiofs.workspace = true
fuse.workspace = true
lx.workspace = true
pci_core.workspace = true
chipset_device.workspace = true
guestmem.workspace = true
vmcore.workspace = true
pal_event.workspace = true
pal_async.workspace = true
inspect.workspace = true

# block_on for resolving the device's deferred config reads on the synchronous
# HDV callback thread (the device task completes them from the pool thread).
futures = "0.3"

# Structured diagnostics. We emit `tracing` events (the transport firehose + the
# aperture-cache stats); the hyperv_virtiofs cdylib installs the subscriber that
# routes them. See CLAUDE.md "Logging & diagnostics".
tracing.workspace = true
