[package]
name = "vmworker-sys"
description = "Raw FFI to the Hyper-V VM worker process device channel (vmwpctrl.dll GetVmWorkerProcess + the FlexibleIov guest-notification COM interfaces)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
# Shared Win32 base types (GUID, HRESULT, HANDLE) so the safe wrapper in `hdv`
# composes without conversions.
hdv-sys = { path = "../hdv-sys" }
